--- a/fla/singleAnim.html
+++ b/fla/singleAnim.html
@@ -16,10 +16,12 @@ var canvas, stage, exportRoot;
 function init() {
 	canvas = document.getElementById("canvas");
 	images = images||{};
+	ss = ss||{};
 
 	var loader = new createjs.LoadQueue(false);
 	loader.addEventListener("fileload", handleFileLoad);
 	loader.addEventListener("complete", handleComplete);
+loader.loadFile({src:"imagesSingle/singleAnim_atlas_.json", type:"spritesheet", id:"singleAnim_atlas_"}, true);
 	loader.loadManifest(lib.properties.manifest);
 }
 
@@ -28,6 +30,8 @@ function handleFileLoad(evt) {
 }
 
 function handleComplete(evt) {
+	var queue = evt.target;
+	ss["singleAnim_atlas_"] = queue.getResult("singleAnim_atlas_");
 	exportRoot = new lib.singleAnim();
 
 	stage = new createjs.Stage(canvas);
